<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:background="@color/fragment_navigation_drawer_background_default"
    android:orientation="vertical"
    tools:context="com.fiteval.ui.fragment.NavigationFragment">

    <!-- Main -->
    <LinearLayout
        android:id="@+id/fragment_navigation_drawer_btn_main"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:background="@color/fragment_navigation_drawer_background_default"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/fragment_navigation_drawer_tv_main"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:text="@string/main"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="30dp"
            android:textStyle="bold" />
    </LinearLayout>

    <View
        android:id="@+id/fragment_navigation_drawer_line1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/slide_menu_line" />

    <!-- Raid -->
    <LinearLayout
        android:id="@+id/fragment_navigation_drawer_btn_raid"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:background="@color/fragment_navigation_drawer_background_default"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/fragment_navigation_drawer_tv_raid"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:text="@string/raid"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="30dp"
            android:textStyle="bold" />
    </LinearLayout>

    <View
        android:id="@+id/fragment_navigation_drawer_line2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/slide_menu_line" />

    <!-- Leaderboard -->
    <LinearLayout
        android:id="@+id/fragment_navigation_drawer_btn_leaderboard"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:background="@color/fragment_navigation_drawer_background_default"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/fragment_navigation_drawer_tv_leaderboard"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:text="@string/leaderboard"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="30dp"
            android:textStyle="bold" />
    </LinearLayout>

    <View
        android:id="@+id/fragment_navigation_drawer_line3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/slide_menu_line" />

    <!-- Shop -->
    <LinearLayout
        android:id="@+id/fragment_navigation_drawer_btn_shop"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:background="@color/fragment_navigation_drawer_background_default"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/fragment_navigation_drawer_tv_shop"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:text="@string/shop"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="30dp"
            android:textStyle="bold" />
    </LinearLayout>

    <View
        android:id="@+id/fragment_navigation_drawer_line4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/slide_menu_line" />
</LinearLayout>