<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.fiteval.ui.activity.LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="30dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="100dp"
                android:layout_height="125dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="10dp"
                android:src="@drawable/knight" />

            <TextView
                android:layout_width="224dp"
                android:layout_height="45dp"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="@color/grey_85"
                android:textSize="40dp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/login_id_root"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="@dimen/activity_default_margin"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/login_edittext_background_default"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/activity_login_id_image"
                    android:layout_width="20dp"
                    android:layout_height="21dp"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/login_id_default" />

                <EditText
                    android:id="@+id/login_et_userId"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:background="@android:color/transparent"
                    android:ems="10"
                    android:hint="@string/login_text_id"
                    android:inputType="textEmailAddress"
                    android:maxHeight="0dp">

                    <requestFocus />
                </EditText>

                <ImageButton
                    android:id="@+id/login_btn_idClear"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="@dimen/activity_default_margin"
                    android:background="@drawable/login_delete"
                    android:visibility="visible" />
            </LinearLayout>

            <!-- -->
            <LinearLayout
                android:id="@+id/login_pw_root"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/login_edittext_background_default"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/activity_login_pw_image"
                    android:layout_width="20dp"
                    android:layout_height="21dp"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/login_pw_default" />

                <EditText
                    android:id="@+id/login_et_userPass"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:background="@android:color/transparent"
                    android:ems="10"
                    android:hint="@string/login_text_pw"
                    android:inputType="textPassword"
                    android:maxHeight="0dp" />

                <ImageButton
                    android:id="@+id/login_btn_pwClear"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_marginRight="@dimen/activity_default_margin"
                    android:background="@drawable/login_delete"
                    android:visibility="visible" />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/signin"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/login_btn"
            android:textAllCaps="true"
            android:textColor="@color/grey_85"
            android:textSize="18dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="2dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/signup"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_weight="1"
                android:text="@string/signup_btn"
                android:textColor="@color/grey_85"
                android:textSize="18dp" />

            <Button
                android:id="@+id/forgot"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_weight="1"
                android:text="@string/forgotpw_btn"
                android:textColor="@color/grey_85"
                android:textSize="18dp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
